# AiMee-Kickflip

./: LICENSE.txt  README.md  package.json  tailwind.config.js
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  lib.rs  llm.rs
src/components/: Icons.tsx
