[package]
name = "tauri-app"
version = "0.1.0"
description = "Quantum-resistant stealth encryption engine"
authors = ["Michael Barlozewski"]
edition = "2021"

[lib]
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes = "0.9.0"
cbc = { version = "0.2.0", features = ["alloc", "block-padding"] }
pbkdf2 = { version = "0.12.2", features = ["hmac"] }
sha2 = "0.10.6"
rand = "0.8.5"
base64 = "0.22.1"
reqwest = { version = "0.13.2", features = ["json"] }
tokio = { version = "1.52.1", features = ["full"] }
hex = "0.4.3"

[profile.release]
panic = "abort"
lto = true
opt-level = "s"
strip = true
